--- a/style.css
+++ b/style.css
@@ -18,13 +18,23 @@ main {
     justify-content: center;
     align-items: center;
     background-color: #D9D9D9;
+    white-space: nowrap;
+    flex-shrink: 0;
 }
 #item1{
-    margin-left:20px;
+    margin-left:1860px; /*vet inte varför jag behöver göra detta btw jag försökte på main med padding men det gjorde så att storleken på main blev för mycket*/
+    margin-right:20px;
     height:400px;
     width:300px;
     background-color: rgb(143, 143, 143);
-    
+    flex-shrink: 0;
+}
+#item2{
+    margin-right:20px;
+    height:400px;
+    width:300px;
+    background-color: rgb(143, 143, 143);
+    flex-shrink: 0;
 }
 footer {
     display: flex;
