--- a/style.css
+++ b/style.css
@@ -4,15 +4,15 @@
     box-sizing: border-box;
 }
 header {
-    display: flex;
-    justify-content: center;
     background-image: url("1000_F_590878856_DKyqrA5eHbvgZyNf3OGXbeT5Csg4vlMg.jpg");
     background-color: #838383;
     width:100%;
+    height:222px;
+    border-bottom: solid black 2px;
 }
 main {
     width:100%;
-    height: calc(100vh - 225px);
+    height: calc(100vh - 247px);
     overflow-x: scroll;
     display: flex;
     justify-content: center;
@@ -20,6 +20,35 @@ main {
     background-color: #D9D9D9;
     white-space: nowrap;
     flex-shrink: 0;
+    
+}
+#loggaarean{
+    margin-left: calc(50% - 100px);
+}
+#loggan{
+    position:absolute;
+}
+#loggatxt{
+    position:absolute;
+    margin-left: 40px;
+    margin-top: 150px;
+    color: rgb(255, 255, 255);
+    text-shadow: 2px 2px 4px #000000;
+}
+nav{
+    background-color: rgb(255, 255, 255);
+    border:solid black 2px;
+    position:absolute;
+    margin-left: calc(50% - 100px);
+    width:225px;
+    display:flex;
+    justify-content: center;
+    margin-top: 200px;
+    user-select: none;
+    
+}
+nav a{
+    margin-right:5px;
 }
 #item1{
     margin-left:1860px; /*vet inte varför jag behöver göra detta btw jag försökte på main med padding men det gjorde så att storleken på main blev för mycket*/
@@ -39,6 +68,7 @@ main {
 footer {
     display: flex;
     justify-content: center;
+    padding-top:5px;
     background-color: #838383;
     width:100%;
     height:25px;
