--- a/style.css
+++ b/style.css
@@ -9,6 +9,9 @@ header {
     width:100%;
     height:222px;
     border-bottom: solid black 2px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 main {
     width:100%;
@@ -23,23 +26,20 @@ main {
     
 }
 #loggaarean{
-    margin-left: calc(50% - 100px);
-}
-#loggan{
     position:absolute;
 }
+
 #loggatxt{
     position:absolute;
-    margin-left: 40px;
-    margin-top: 150px;
+    
+    margin-top: 50px;
     color: rgb(255, 255, 255);
     text-shadow: 2px 2px 4px #000000;
 }
 nav{
     background-color: rgb(255, 255, 255);
     border:solid black 2px;
-    position:absolute;
-    margin-left: calc(50% - 100px);
+
     width:225px;
     display:flex;
     justify-content: center;
