--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ header {
     align-items: center;
 }
 main {
-    width:100%;
     height: calc(100vh - 247px);
     overflow-x: scroll;
     display: flex;
@@ -23,6 +22,7 @@ main {
     background-color: #D9D9D9;
     white-space: nowrap;
     flex-shrink: 0;
+    
     
 }
 #loggaarean{
@@ -54,16 +54,20 @@ nav a{
     margin-right:5px;
 }
 #item1{
-    margin-left:1860px; /*vet inte varför jag behöver göra detta btw jag försökte på main med padding men det gjorde så att storleken på main blev för mycket*/
+
+    /*margin-left:1860px;*/ /*vet inte varför jag behöver göra detta btw jag försökte på main med padding men det gjorde så att storleken på main blev för mycket*/
     margin-right:20px;
     height:400px;
+    display: flex;
     width:300px;
     background-color: rgb(143, 143, 143);
     flex-shrink: 0;
+    
 }
 #item2{
     margin-right:20px;
     height:400px;
+    display: flex;
     width:300px;
     background-color: rgb(143, 143, 143);
     flex-shrink: 0;
