--- a/style.css
+++ b/style.css
@@ -54,6 +54,8 @@ nav a{
     margin-right:5px;
 }
 #item1{
+    color: black;
+    text-decoration: none;
     margin-left:10px;
     margin-right:10px;
     height:400px;
