--- a/style3.css
+++ b/style3.css
@@ -58,7 +58,7 @@ main {
     pointer-events: none; 
     font-size: 16px;
     font-weight: bold;
-    color: red;
+    color: black;
     transform: translate(-50%, -50%);
     z-index: 9999;
   }
